gitops/overlays/perf/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k # required for OAuth proxy
  labels:
    app.kubernetes.io/name: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: cdcp-perf.dev-dp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: oauth-proxy
    - host: cdcp-perf.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: application
